# NOTE: Do not use underscores for Choices as meson parser cannot recognize it!
option('product_family', type : 'combo',
  choices : ['RABBlueController', 'RabHighbayNewId'],
  value : 'RABBlueController',
  description : 'Select the product family to build.'
)

option('product_pid', type : 'combo',
  choices : ['108F', '1091'],
  value : '108F',
  description : 'Enter the Product ID (e.g., 108F, 1091).'
)

option('ble_stack_variant',
  type : 'combo',
  choices : ['standard','ble8278'], # Or whatever choices you defined
  value : 'standard',                 # Your default value
  description : 'Select the BLE stack library variant to build from firmware/stack/.'
)
# Add other global options if needed, e.g., for optimization or build type,
# even if no executable is built at the root level yet.
option('build_type', type : 'combo', choices : ['debug', 'release', 'debugoptimized'], value : 'debugoptimized', description : 'Select build type.')